fixed vertical scroll and some layout issues

--- a/sass/components/avatar.scss
+++ b/sass/components/avatar.scss
@@ -1,8 +1,13 @@
-.avatar {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 256px;
-  max-height: 256px;
+.avatar-container {
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 55%;
+  .avatar {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 256px;
+    max-height: 256px;
+  }
 }
 
 @media (max-width: 768px) {
