--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,11 +7,5 @@
 @import "./themes.scss";
 @import "./utilities.scss";
 
-// ToDo: remove
-// center main body
-main {
-  height: 100vh;
-}
-
 // Custom styles
 @import "./components";
